tests/NormalTests/paczka1/fuzzy1/27406165.err
Error in line 2: S386 S29 64,5
Error in line 10: gavIdvc SW9 1W,7
Error in line 13: gavIdvc S29 >0,9
Error in line 9: gavIdvc S143 78,6
Error in line 6: 0xY6JUuh018 S386 70,8
Error in line 18: 6JpyWv S29 84,2
Error in line 37: VF0CJJ S29 20,2
Error in line 38: VF0CJJ S386 22,8
